# recipe-app-api

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/: =58.0.0
app/app/: settings.py
