[tool.poetry]
name = "recipe-app-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "3.2.4"
djangorestframework = "3.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
