[tool.poetry]
name = "recipe-app-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.1"
djangorestframework = "3.15.2"
pytest-django = "^4.9.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core==1.8.3"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist"
]

[tool.poetry.scripts]
lint = "flake8 ."

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "testing/python/*.py", "test*.py"]
